8257028: [type-restrictions] Assorted issues with generation of RestrictedField attributes from annotations